[package]
name = "rouge_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bevy = ["dep:bracket-bevy", "dep:bevy"]

[dependencies]
bevy = { version = "~0.9", optional = true}
bracket-lib = { git = "https://github.com/capslock/bracket-lib", branch = "with-merged-fixes", features = ["bevy", "serde", "threaded"]}
bracket-bevy = { git = "https://github.com/capslock/bracket-lib", branch = "with-merged-fixes", optional = true }
object-pool = "0.5.3"