[package]
name = "rouge_saveload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy = "0.13.0"
bincode = { version = "1.3.3", optional = true }
flate2 = "1.0.25"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
ron = "0.8.0"
serde = "1.0.152"
thiserror = "1.0.38"
tracing = "0.1.37"

[target.wasm32-unknown-unknown.dependencies]
base64 = "0.21.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features=["Window", "Storage"] }

[features]
default = ["serialize-binary"]
serialize-binary = ["dep:bincode"]