[package]
name = "rouge_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "fmt", "std"] }
tracing-tracy = { version = "0.10.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[target.wasm32-unknown-unknown.dependencies.time]
version = "0.3.17"
features = ["wasm-bindgen"]

[features]
default = []
profile = ["dep:tracing-tracy"]
